--- a/Gabarita/client/package.json
+++ b/Gabarita/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stackframe/react": "^2.8.51",
     "axios": "^1.13.2",
     "nodemon": "^3.1.10",
     "react": "^19.2.0",
