--- a/Gabarita/server/package.json
+++ b/Gabarita/server/package.json
@@ -13,9 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "@stackframe/js": "^2.8.51",
     "@stackframe/react": "^2.8.51",
     "axios": "^1.13.2",
-    "better-auth": "^1.3.34",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0"
