--- a/Gabarita/server/package.json
+++ b/Gabarita/server/package.json
@@ -2,20 +2,21 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "nodemon src/index.mjs",
+    "dev": "nodemon src/index.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.19.0",
-    "@stackframe/js": "^2.8.51",
     "@stackframe/react": "^2.8.51",
+    "adapter": "^1.0.0-beta.10",
     "axios": "^1.13.2",
+    "better-auth": "^1.3.34",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0"
