--- a/Gabarita/server/package.json
+++ b/Gabarita/server/package.json
@@ -14,12 +14,12 @@
   "dependencies": {
     "@prisma/client": "^6.19.0",
     "@stackframe/react": "^2.8.51",
-    "adapter": "^1.0.0-beta.10",
     "axios": "^1.13.2",
-    "better-auth": "^1.3.34",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
