--- a/Gabarita/server/package.json
+++ b/Gabarita/server/package.json
@@ -12,17 +12,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^7.0.1",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "@stackframe/react": "^2.8.51",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3",
+    "prisma": "^7.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
-    "prisma": "^7.0.1"
+    "nodemon": "^3.1.10"
   }
 }
